# PQi

./: CMakeLists.txt  README.md
CxxSocketTests/: .CxxSocketTests.ascodt  .classpath  .project
CxxSocketTests/components/java/de/tum/: Query.h  Query.java  Query2SocketPlainPort.f90  Query2SocketPlainPortProxy.f90  QueryAbstractPort.java  QueryAbstractSocketPort.java  QueryC2CxxSocketPlainPort.cpp  QueryC2CxxSocketPlainPort.h  QueryCProxyNativeSocketDispatcher.cpp  QueryCxx2SocketPlainPort.cpp  QueryCxx2SocketPlainPort.h  QueryDispatcher.java  QueryFNativeSocketDispatcher.f90  QueryFProxyNativeSocketDispatcher.f90  QueryNative2JavaPlainPort.cpp  QueryNative2JavaPlainPort.h  QueryNative2JavaPlainPort.java  QueryNative2NativePlainPort.cpp  QueryNative2NativePlainPort.h  QueryNative2NativePlainPort.java  QueryNativeDispatcher.cpp  QueryNativeDispatcher.h  QueryNativeDispatcher.java  QueryPlainJavaPort.java  QuerySocket2JavaPlainPort.java  QuerySocket2SocketPlainPort.java  QuerySocketDispatcher.java  QuerySocketPort.java  Sim.java  Sim2SocketPlainPortProxy.f90  SimAbstractPort.java  SimAbstractSocketPort.java  SimCxx2SocketPlainPort.cpp  SimDispatcher.java  SimFProxyNativeSocketDispatcher.f90  SimNative2JavaPlainPort.java  SimNative2NativePlainPort.cpp  SimNative2NativePlainPort.h  SimNative2NativePlainPort.java  SimNativeDispatcher.java  (+20 more)
CxxSocketTests/native/: SocketTestA  SocketTestB  cluster_bandwidth.py  cluster_network_bandwidth.csv  cluster_network_bandwidth10_731_l3_16_8_1024x1024.csv  cluster_network_bandwidth10_731_l3_16_8_1024x1024h.csv  cluster_network_bandwidth10_731_l3_16_8_4096x4096.csv  cluster_network_bandwidth10_731_l3_16_8_4096x4096h.csv  cluster_network_bandwidth10_731_l3_8_8_1024x1024h.csv  cluster_network_bandwidth2_83_9_16_2_1024x1024.csv  cluster_network_bandwidth2_83_9_2_2_1024x1024.csv  cluster_network_bandwidth2_83_9_8_2_1024x1024.csv  cluster_network_bandwidth4_83_9_2_2_1024x1024.csv  cluster_network_bandwidth_29_1_1_256x256.csv  cluster_network_bandwidth_29_9_1_256x256.csv  cluster_network_bandwidth_731_16_2_1_1024x1024.csv  cluster_network_bandwidth_83_72_8_1_1024x1024.csv  cluster_network_bandwidth_83_72_8_2_1024x1024.csv  cluster_network_bandwidth_83_9_1_1_1024x1024.csv  cluster_network_bandwidth_83_9_2_1_1024x1024.csv  cluster_network_bandwidth_83_9_4_1_1024x1024.csv  cluster_network_bandwidth_83_9_8_1_1024x1024.csv  cluster_network_bandwidth_83_9_8_2_1024x1024.csv  cluster_network_bandwidth_83_9_9_1_1024x1024.csv  log_file_0.txt  log_file_1.txt  log_file_10.txt  log_file_11.txt  log_file_12.txt  log_file_13.txt  log_file_14.txt  log_file_15.txt  log_file_2.txt  log_file_3.txt  log_file_4.txt  log_file_5.txt  log_file_6.txt  log_file_7.txt  log_file_8.txt  log_file_9.txt  (+5 more)
CxxSocketTests/settings/: SocketTestA.settings  SocketTestB.settings
CxxSocketTests/sidl/: SocketTestA.sidl  SocketTestB.sidl
CxxSocketTests/src/: Makefile.SocketTestB
CxxSocketTests/src/cmake-de.tum.SocketTestA/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  for  qrc_icons.cxx  ui_SimpleView.h
CxxSocketTests/src/cmake-de.tum.SocketTestA/__/de/tum/: moc_MyTimer.cxx  moc_SimpleView.cxx
CxxSocketTests/src/cmake-de.tum.SocketTestB/: CMakeCache.txt  CMakeLists.txt
CxxSocketTests/src/de/tum/: MyTimer.hpp  MyTimer.hpp~  SimpleView.cxx  SimpleView.h  SocketTestABasisJavaImplementation.java  SocketTestAImplementation.cpp  SocketTestAImplementation.cpp~  SocketTestAImplementation.h  SocketTestAImplementation.h~  SocketTestAJavaImplementation.java  SocketTestBBasisJavaImplementation.java  SocketTestBImplementation.cpp  SocketTestBJavaImplementation.java  vtkMyImageData.cxx  vtkMyImageData.h  vtkMyImageData.h~
CxxSocketTests/workspace/: MySecondWorkbench.workbench  MyWorkbench.workbench
PQI-ascodt/: .PQI-ascodt.ascodt  .classpath  .project  CMakeLists.txt  CMakeLists.txt~
PQI-ascodt/.externalToolBuilders/: de.tum.ascodt.plugin.project.builders.ProjectBuilder.launch
PQI-ascodt/components/java/de/tum/: Copy of PQIDispatcherC2CxxProxy.cpp  PQIDispatcher.java  PQIDispatcherAbstractImplementation.cpp  PQIDispatcherAbstractImplementation.h  PQIDispatcherC2CxxProxy.cpp  iQuery.h  iQuery.java  iQuery2SocketClientPlainPort.f90  iQuery2SocketClientPlainPortProxy.f90  iQueryAbstractPort.java  iQueryC2CxxSocketClientPlainPort.cpp  iQueryC2CxxSocketClientPlainPort.h  iQueryCxx2SocketClientPlainPort.cpp  iQueryCxx2SocketClientPlainPort.h  iQueryDispatcher.java  iQueryNative2JavaPlainPort.cpp  iQueryNative2JavaPlainPort.h  iQueryNative2JavaPlainPort.java  iQueryNative2NativePlainPort.cpp  iQueryNative2NativePlainPort.h  iQueryNative2NativePlainPort.java  iQueryNative2SocketClientPlainPort.java  iQueryNativeDispatcher.cpp  iQueryNativeDispatcher.h  iQueryNativeDispatcher.java  iQueryPlainJavaPort.java
PQI-ascodt/sidl/: PQIDispatcher.sidl
PQI-ascodt/src/de/tum/: PQIDispatcherImplementation.cpp  PQIDispatcherImplementation.h
src/: DummyQuery.cpp  DummyQuery.h  Query.h  QueryCxx2SocketClientPlainPort.h  createRecords.sh  vtkClientQuery.cpp  vtkClientQuery.h
src/dastgen/.svn/text-base/: Answer.def.svn-base  AnswerConfiguration.def.svn-base
src/de/tum/: iQueryCxx2SocketClientPlainPort.cpp  iQueryCxx2SocketClientPlainPort.h
src/queries/: DummyQuery.cpp~  DummyQuery.h~  Query.h  Query.h~  QueryCxx2SocketClientPlainPort.cpp  QueryServer.cpp  QueryServer.cpp~  QueryServer.h  QueryServer.h~  vtkClientQuery.cpp  vtkClientQuery.h
src/queries/dastgen/: HeapQuery.def  HeapQuery.def~
src/queries/dastgen/.svn/: entries
src/queries/records/: Answer.cpp  Answer.h  AnswerConfiguration.h  HeapQuery.cpp  HeapQuery.h  HeapQuery.h~
src/queries/records/.svn/: entries
src/records/.svn/text-base/: AnswerConfiguration.cpp.svn-base
